--- a/index.html
+++ b/index.html
@@ -5,6 +5,34 @@
     <link rel="icon" type="image/svg+xml" href="/SpeedX_Logo_Transparent_white.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Swastik Sharma</title>
+    <meta name="description" content="Swastik Sharma — Frontend Developer portfolio featuring React projects, articles, and gallery. Built with React, Vite, Tailwind CSS, and GSAP." />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://swastikmacolio.vercel.app/" />
+    <meta name="author" content="Swastik Sharma" />
+    <meta name="theme-color" content="#111827" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Swastik Sharma — Frontend Developer Portfolio" />
+    <meta property="og:description" content="Explore projects, articles, and galleries built with React, Vite, Tailwind, GSAP." />
+    <meta property="og:url" content="https://swastikmacolio.vercel.app/" />
+    <meta property="og:image" content="https://swastikmacolio.vercel.app/images/wallpaper.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Swastik Sharma — Frontend Developer Portfolio" />
+    <meta name="twitter:description" content="Explore projects, articles, and galleries built with React, Vite, Tailwind, GSAP." />
+    <meta name="twitter:image" content="https://swastikmacolio.vercel.app/images/wallpaper.png" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Swastik Sharma Portfolio",
+        "url": "https://swastikmacolio.vercel.app/",
+        "description": "Frontend developer portfolio showcasing React projects, articles and gallery.",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://swastikmacolio.vercel.app/?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
