--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <meta property="og:title" content="Swastik Sharma — Frontend Developer Portfolio" />
     <meta property="og:description" content="Explore projects, articles, and galleries built with React, Vite, Tailwind, GSAP." />
     <meta property="og:url" content="https://swastikmacolio.vercel.app/" />
-    <meta property="og:image" content="https://swastikmacolio.vercel.app/images/wallpaper.png" />
+    <meta property="og:image" content="https://swastikmacolio.vercel.app/preview.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Swastik Sharma — Frontend Developer Portfolio" />
     <meta name="twitter:description" content="Explore projects, articles, and galleries built with React, Vite, Tailwind, GSAP." />
-    <meta name="twitter:image" content="https://swastikmacolio.vercel.app/images/wallpaper.png" />
+    <meta name="twitter:image" content="https://swastikmacolio.vercel.app/preview.png" />
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
