--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/SpeedX_Logo_Transparent_white.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swastik Sharma — Frontend Developer Portfolio</title>
+    <title>Swastik Sharma - Frontend Developer Portfolio</title>
 
     <!-- Primary SEO -->
     <meta name="description" content="Modern frontend developer portfolio by Swastik Sharma. Explore high-performance React projects, interactive UI experiments, articles, and galleries built with React, Vite, Tailwind CSS, and GSAP animations." />
