updated meta tags

--- a/index.html
+++ b/index.html
@@ -41,8 +41,21 @@
         }
       }
     </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Swastik Sharma",
+        "url": "https://swastikmacolio.vercel.app/",
+        "jobTitle": "Frontend Developer",
+        "sameAs": [
+          "https://www.linkedin.com/in/swastik15sharma/",
+          "https://github.com/swastiksharma15",
+          "https://www.youtube.com/@SpeedX_"
+        ]
+      }
+    </script>
 
-    <script type="module" src="/src/main.jsx"></script>
   </head>
 
   <body>
