--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Primary SEO -->
     <meta name="description" content="Modern frontend developer portfolio by Swastik Sharma. Explore high-performance React projects, interactive UI experiments, articles, and galleries built with React, Vite, Tailwind CSS, and GSAP animations." />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://swastikmacolio.vercel.app/" />
+    <link rel="canonical" href="https://www.swastikmacolio.in/" />
     <meta name="author" content="Swastik Sharma" />
     <meta name="theme-color" content="#111827" />
 
@@ -27,14 +27,14 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Swastik Sharma - Frontend Developer Portfolio" />
     <meta property="og:description" content="Dive into modern React projects, UI demos, articles, and interactive showcases built using React, Vite, Tailwind, and GSAP." />
-    <meta property="og:url" content="https://swastikmacolio.vercel.app/" />
-    <meta property="og:image" content="https://swastikmacolio.vercel.app/preview.png" />
+    <meta property="og:url" content="https://www.swastikmacolio.in/" />
+    <meta property="og:image" content="https://www.swastikmacolio.in/preview.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Swastik Sharma - Frontend Developer Portfolio" />
     <meta name="twitter:description" content="Explore modern frontend work - React projects, UI experiments, articles, and galleries." />
-    <meta name="twitter:image" content="https://swastikmacolio.vercel.app/preview.png" />
+    <meta name="twitter:image" content="https://www.swastikmacolio.in/preview.png" />
 
     <!-- Schema.org JSON-LD -->
     <script type="application/ld+json">
@@ -42,11 +42,11 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Swastik Sharma Portfolio",
-        "url": "https://swastikmacolio.vercel.app/",
+        "url": "https://www.swastikmacolio.in/",
         "description": "Frontend developer portfolio showcasing React projects, UI experiments, articles and gallery.",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://swastikmacolio.vercel.app/?q={search_term_string}",
+          "target": "https://www.swastikmacolio.in/?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
@@ -56,7 +56,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Swastik Sharma",
-        "url": "https://swastikmacolio.vercel.app/",
+        "url": "https://www.swastikmacolio.in/",
         "jobTitle": "Frontend Developer",
         "sameAs": [
           "https://www.linkedin.com/in/swastik15sharma/",
