react memo performace optimization

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <meta name="twitter:creator" content="@swastiksharma" />
     <meta name="twitter:site" content="@swastiksharma" />
 
+    <!-- Preload critical fonts -->
+    <link rel="preload" as="font" href="https://fonts.googleapis.com/css2?family=Georama:ital,wght@0,100..900;1,100..900&display=swap" crossorigin />
+
     <!-- Schema.org JSON-LD -->
     <script type="application/ld+json">
       {
