--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </script>
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/SpeedX_Logo_Transparent_white.webp" />
+    <link rel="icon" type="image/svg+xml" href="/macbook.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swastik Sharma - Frontend Developer Portfolio</title>
+    <title>Aaditya Chhatraliya Portfolio</title>
 
     <!-- Primary SEO -->
     <meta name="keywords" content="Swastik Sharma, swastik macolio, Swastik Sharma Macolio, frontend developer, React developer, JavaScript developer, web developer portfolio, UI/UX developer, modern web development, React projects, Vite, Tailwind CSS, GSAP animations, interactive portfolio, macOS portfolio, desktop portfolio, web applications, responsive design, frontend engineer, full stack developer, portfolio website, creative developer, India developer" />
